[package]
name = "calcuuube"
version = "0.1.0"
edition = "2021"

[dependencies]
kalk = { git = "https://github.com/Kuuuube/kalker", rev = "c6f2442e049f2e19348b859716ac081d7ad00a2a" }
egui = "0.28.1"
egui_extras = "0.28.1"
eframe = { version = "0.28.1", features = [ "default_fonts", "glow", "persistence" ] }
env_logger = "0.11.3"
serde = "1.0.203"
