[package]
name = "calcuuube"
version = "0.1.0"
edition = "2021"

[dependencies]
kalk = { git = "https://github.com/Kuuuube/kalker", rev = "82e6d0eeb8d7a35cf1009782ed2cc1103e1741b5" }
egui = "0.28.1"
egui_extras = "0.28.1"
eframe = { version = "0.28.1", features = [ "default_fonts", "glow", "persistence" ] }
env_logger = "0.11.3"
serde = "1.0.203"
